# rustws

./: Cargo.toml  shell.nix
nix/: rust.nix  sources.nix
src/: chat.rs  main.rs
