[package]
name = "rustws"
version = "0.1.0"
authors = ["John Lynn <john@johnlynn.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-rt = "1.0"
bytes = "0.5.5"
futures = "0.3.5"
listenfd = "0.3"
